
2004/11/21: Martin Preuss<martin@libchipcard.de>
-------------------------------------------------
- typemaker:
  - added property "volatile": if set then the element is not written to or
    read from a db
  - fixed some bugs: DOMAIN name was not prepended to function definitions 
    in header files
  - now _LIST2_dup() functions are created if LIST2 is enabled
  - now adds apidocs for automatically generated functions
- list(2): First() and Last() use const arguments now


===========================================================================
MARK: released gwenhywfar-1.3 (2004/11/19)
===========================================================================


2004/11/19: Martin Preuss<martin@libchipcard.de>
-------------------------------------------------
- added functions:
  - GWEN_Time_toString
  - GWEN_Time_toUtcString
  ------------------------------------------------------------------------
  !     remember to do SO_CURRENT++ and SO_AGE++ before next release     !
  ------------------------------------------------------------------------
- armed CSV plugins import function
- fixed a bug in CSV-importer: now title lines are skipped if "title=0" in
  parameters
- added defines for printf-templates for GWEN_TYPEs
- fixed some 64bit-warnings
- current version also compiles (with few warnings) on 
  - alpha (Debian)                  [few warnings]
  - amd64 (suse)                    [few warnings]
  - SunOS (5.9, SUNW,Ultra-60)      [without warning]
  - Mac OSX (Darwin 6.8, PowerPC)
  - FreeBSD 4.10 (i386)
  - NetBSD 1.6.1 (i386)
- added support for NetBSD to automake script os.m4
- fixed some bugs in Makefiles:
  - when ncurses is not available (was assuming if
    ncurses is not there it must be Windoze. Well, that's not the case ;-)
  - there must be no blank between "-D" and the macro to define via 
    "-DSOMETHING", otherwise some MacOSX bails out...


2004/11/11: Martin Preuss<martin@libchipcard.de>